// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`#462 doctor text report, pinned > pins the check set and its order independently of the rendered text 1`] = `
[
  "cli-runtime",
  "runtime-identity",
  "installation-integrity",
  "notes-refspec",
  "notes-push",
  "commit-msg-hook",
  "hook-runtime",
  "inject-runtime",
  "inject-version",
  "directive-trust-mode",
  "mcp-lifecycle",
  "mcp-runtime-identity",
  "unattended-initiator",
  "pending-backlog",
  "git-trailers",
  "history-depth",
  "index-health",
  "squash-conservation",
]
`;

exports[`#462 doctor text report, pinned > renders a stable report on a repository whose hook target is missing 1`] = `
"Next action [notes-refspec]: origin does not fetch refs<path> so records pushed by others stay invisible here — git config --add remote.origin.fetch 'refs/notes/*:refs/notes/*'
<totals> (<ms>)
1. [warn] notes-refspec — origin does not fetch refs<path> so records pushed by others stay invisible here (git config --add remote.origin.fetch 'refs/notes/*:refs/notes/*')
2. [warn] commit-msg-hook — a commit-msg hook exists at <repo>/.git/hooks/commit-msg but does not invoke commitlore; commitlore.bin: <tmp>/cl-snap-<tmpdir>/no-such-binary.mjs; commitlore.node: <node> (commitlore hooks install)
3. [warn] inject-runtime — not installed in <repo>/.claude/settings.json (commitlore inject install-claude-hook)
ok      cli runtime — <root><path> runs (<version>)
ok      runtime identity — all observed runtimes match CLI: v<version>; entry <root><path> root <root>; schema v4
ok      installation integrity — 3 shipped files are present and readable
warn    notes fetch refspec — origin does not fetch refs<path> so records pushed by others stay invisible here
        fix: git config --add remote.origin.fetch 'refs/notes/*:refs/notes/*'
ok      notes push — no local mirror yet — nothing to push (git push origin refs<path> once there is)
warn    commit-msg hook — a commit-msg hook exists at <repo>/.git/hooks/commit-msg but does not invoke commitlore; commitlore.bin: <tmp>/cl-snap-<tmpdir>/no-such-binary.mjs; commitlore.node: <node>
        fix: commitlore hooks install
ok      hook runtime — the hook runs and validates without node on PATH
warn    PreToolUse hook runtime — not installed in <repo>/.claude/settings.json
        fix: commitlore inject install-claude-hook
skipped PreToolUse hook version — no installed hook to compare against <version>
ok      directive trust mode — author-string mode: directives need a configured author string, which anyone able to write a commit can forge.
ok      MCP server sessions — every recorded MCP session ended cleanly, or is still running
ok      live MCP runtime identity — <machine state>
ok      unattended capture initiator — unattended capture is off; no host initiator is required
ok      pending captures — no captures are waiting
ok      git interpret-trailers — git version <git>
ok      history depth — full history is available
ok      index health — 3 trailers over 1 commits, current with HEAD — no FTS5 (value search falls back to LIKE)
skipped squash conservation — no local branch looks like the source of a squash — nothing to check"
`;

exports[`#462 doctor text report, pinned > renders a stable report on a repository whose hook target resolves 1`] = `
"Next action [notes-refspec]: origin does not fetch refs<path> so records pushed by others stay invisible here — git config --add remote.origin.fetch 'refs/notes/*:refs/notes/*'
<totals> (<ms>)
1. [warn] notes-refspec — origin does not fetch refs<path> so records pushed by others stay invisible here (git config --add remote.origin.fetch 'refs/notes/*:refs/notes/*')
2. [warn] commit-msg-hook — a commit-msg hook exists at <repo>/.git/hooks/commit-msg but does not invoke commitlore; commitlore.bin: <root><path> commitlore.node: <node> (commitlore hooks install)
3. [warn] inject-runtime — not installed in <repo>/.claude/settings.json (commitlore inject install-claude-hook)
ok      cli runtime — <root><path> runs (<version>)
ok      runtime identity — all observed runtimes match CLI: v<version>; entry <root><path> root <root>; schema v4
ok      installation integrity — 3 shipped files are present and readable
warn    notes fetch refspec — origin does not fetch refs<path> so records pushed by others stay invisible here
        fix: git config --add remote.origin.fetch 'refs/notes/*:refs/notes/*'
ok      notes push — no local mirror yet — nothing to push (git push origin refs<path> once there is)
warn    commit-msg hook — a commit-msg hook exists at <repo>/.git/hooks/commit-msg but does not invoke commitlore; commitlore.bin: <root><path> commitlore.node: <node>
        fix: commitlore hooks install
ok      hook runtime — the hook runs and validates without node on PATH
warn    PreToolUse hook runtime — not installed in <repo>/.claude/settings.json
        fix: commitlore inject install-claude-hook
skipped PreToolUse hook version — no installed hook to compare against <version>
ok      directive trust mode — author-string mode: directives need a configured author string, which anyone able to write a commit can forge.
ok      MCP server sessions — every recorded MCP session ended cleanly, or is still running
ok      live MCP runtime identity — <machine state>
ok      unattended capture initiator — unattended capture is off; no host initiator is required
ok      pending captures — no captures are waiting
ok      git interpret-trailers — git version <git>
ok      history depth — full history is available
ok      index health — 3 trailers over 1 commits, current with HEAD — no FTS5 (value search falls back to LIKE)
skipped squash conservation — no local branch looks like the source of a squash — nothing to check"
`;

exports[`#470 doctor text report header > keeps the per-check tail byte-identical to the pre-ticket rows 1`] = `
{
  "broken": "ok      cli runtime — <root><path> runs (<version>)
ok      runtime identity — all observed runtimes match CLI: v<version>; entry <root><path> root <root>; schema v4
ok      installation integrity — 3 shipped files are present and readable
warn    notes fetch refspec — origin does not fetch refs<path> so records pushed by others stay invisible here
        fix: git config --add remote.origin.fetch 'refs/notes/*:refs/notes/*'
ok      notes push — no local mirror yet — nothing to push (git push origin refs<path> once there is)
warn    commit-msg hook — a commit-msg hook exists at <repo>/.git/hooks/commit-msg but does not invoke commitlore; commitlore.bin: <tmp>/cl-snap-<tmpdir>/missing.mjs; commitlore.node: <node>
        fix: commitlore hooks install
ok      hook runtime — the hook runs and validates without node on PATH
warn    PreToolUse hook runtime — not installed in <repo>/.claude/settings.json
        fix: commitlore inject install-claude-hook
skipped PreToolUse hook version — no installed hook to compare against <version>
ok      directive trust mode — author-string mode: directives need a configured author string, which anyone able to write a commit can forge.
ok      MCP server sessions — every recorded MCP session ended cleanly, or is still running
ok      live MCP runtime identity — <machine state>
ok      unattended capture initiator — unattended capture is off; no host initiator is required
ok      pending captures — no captures are waiting
ok      git interpret-trailers — git version <git>
ok      history depth — full history is available
ok      index health — 3 trailers over 1 commits, current with HEAD — no FTS5 (value search falls back to LIKE)
skipped squash conservation — no local branch looks like the source of a squash — nothing to check",
  "working": "ok      cli runtime — <root><path> runs (<version>)
ok      runtime identity — all observed runtimes match CLI: v<version>; entry <root><path> root <root>; schema v4
ok      installation integrity — 3 shipped files are present and readable
warn    notes fetch refspec — origin does not fetch refs<path> so records pushed by others stay invisible here
        fix: git config --add remote.origin.fetch 'refs/notes/*:refs/notes/*'
ok      notes push — no local mirror yet — nothing to push (git push origin refs<path> once there is)
warn    commit-msg hook — a commit-msg hook exists at <repo>/.git/hooks/commit-msg but does not invoke commitlore; commitlore.bin: <root><path> commitlore.node: <node>
        fix: commitlore hooks install
ok      hook runtime — the hook runs and validates without node on PATH
warn    PreToolUse hook runtime — not installed in <repo>/.claude/settings.json
        fix: commitlore inject install-claude-hook
skipped PreToolUse hook version — no installed hook to compare against <version>
ok      directive trust mode — author-string mode: directives need a configured author string, which anyone able to write a commit can forge.
ok      MCP server sessions — every recorded MCP session ended cleanly, or is still running
ok      live MCP runtime identity — <machine state>
ok      unattended capture initiator — unattended capture is off; no host initiator is required
ok      pending captures — no captures are waiting
ok      git interpret-trailers — git version <git>
ok      history depth — full history is available
ok      index health — 3 trailers over 1 commits, current with HEAD — no FTS5 (value search falls back to LIKE)
skipped squash conservation — no local branch looks like the source of a squash — nothing to check",
}
`;
